--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">Калькулятор</string>
     <string name="error_parsing">Неправильное использование операторов или результат не может быть получен</string>
+    <string name="goBack">Назад</string>
+    <string name="goForward">Переключиться на \"Login\"</string>
 </resources>
